--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.503.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.9",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
