--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -18,17 +19,20 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-maps": "1.18.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-permissions": "^5.4.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.3.2",
-    "react-native-maps": "1.18.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
