--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.503.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^8.2.1",
     "react-native-maps": "1.18.0",
     "react-native-modal": "^14.0.0-rc.1",
