--- a/client/eas.json
+++ b/client/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
     "version": ">= 16.4.0",
+    "requireCommit":"true",
     "appVersionSource": "remote"
   },
   "build": {
@@ -9,7 +10,10 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {
       "autoIncrement": true
