--- a/client/package.json
+++ b/client/package.json
@@ -33,11 +33,13 @@
     "react-native-svg": "^15.11.2",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "^18.0.0"
+    "@react-native-community/cli": "^18.0.0",
+    "eas-cli": "^16.13.2"
   },
   "private": true
 }
